// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeechPanel renders without crashing when loginned 1`] = `
<div
  className="chat-speech-panel-container"
>
  <Connect(SpeechField) />
</div>
`;

exports[`SpeechPanel renders without crashing when not loginned 1`] = `
<div
  className="chat-speech-panel-container"
>
  <NotLoginnedMessage />
</div>
`;
